--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -13,13 +13,13 @@ body {
     padding: 20px;
 }
 
-.containts {
+.contains {
     padding: 20px;
     border: 1px solid #000000;
     height: 550px;
 }
 
-.containts h1 {
+.contains h1 {
     text-align: center;
     margin-bottom: 20px;
 }
