--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,7 +5,7 @@ body {
   height: 800px
 }
 
-.containts {
+.contains {
   width: 780px;
   height: 550px;
   margin: 0 auto;
@@ -119,7 +119,7 @@ img {
   transform: translateY(-1px);
 }
 
-.btn-containts {
+.btn-contains {
   display: flex;
   align-items: center;
   justify-content: center;
