--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -19,6 +19,12 @@ body {
     height: 550px;
 }
 
+.contains {
+    padding: 20px;
+    border: 1px solid #000000;
+    height: 550px;
+}
+
 .contains h1 {
     text-align: center;
     margin-bottom: 20px;
