--- a/public/css/login.css
+++ b/public/css/login.css
@@ -13,7 +13,7 @@ body {
   margin: 0 auto;
 }
 
-.form-sign-in {
+.form-signin {
   width: 40%;
   padding: 15px;
   margin-bottom: 40px;
@@ -25,7 +25,7 @@ h1 {
   margin: 20px 20px 40px 20px;
 }
 
-.form-sign-in .form-control {
+.form-signin .form-control {
   width: 100%;
   border: 1px solid #ccc;
   padding: 10px;
@@ -35,11 +35,11 @@ h1 {
   letter-spacing: 1px;
 }
 
-.form-sign-in .form-control::placeholder {
+.form-signin .form-control::placeholder {
   font-weight: lighter;
 }
 
-.form-sign-in .btn-container {
+.form-signin .btn-container {
   display: flex;
   justify-content: space-between;
 }
